hosted/style.css
* { box-sizing: border-box; }

html, body {
  background-image: url("./leaves-pattern.png");
	background-repeat: repeat;
	background-attachment: fixed;
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

hr {
	width: 90%;
}

#top {
  width: 100%;
  position: fixed;
  background-color: #fff;
  padding: 10px;
  padding-bottom: 5px;
  box-shadow: 3px 3px 20px #E8E8E8;
  z-index: 11;
  top:0;
	left: 0;
  margin: 0px;
  text-align: center;
  border-bottom: 2px solid #E8E8E8;
}

.form-split {
  display: inline-block;
  vertical-align: top;
  width: 50%;
}

.form-split-element {
  display: block;
  margin-bottom: 15px;
}

.top-element, .top-element-right {
  display: inline;
  color: #3a3c3d;
  margin: 5px;
}

.top-element label {
  font-size: 16pt;
}

.text-input{
  /*color: #3a3c3d;*/
  background-color: #E8E8E8;
  border-radius: 10px;
  border-style: none;
  font-size: 14pt;
  padding: 5px;
  width: 50%;
}

.top-element-right {
  text-align: right;
}

#top img {
  margin: auto;
  vertical-align: middle;
  width: 45px;
}

.displayButton {
  transition-property: color, filter;
  transition-duration: 0.25s;
}

.displayButton:hover {
  filter: invert(50%);
  cursor: pointer;
  color: #808080;
}

.button {
  font-size: 20pt;
  background-color: #fff;
  border-radius: 10px;
  border-style: none;
  margin-bottom: 15px;
  transition-property: background;
  transition-duration: 0.25s;
}

.button:hover {
  cursor: pointer;
  background-color: #E8E8E8;
}

#top h1 {
  font-size: 2em;
}

#content {
  margin-top: 60px;
  font-size: 2em;
  text-align: center;
}

.load-gif img {
  width: 99%;
  height: 99%;
}

/* MODAL STYLING*/
.modal-background {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 3; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  animation-name: fadeIn;
  animation-duration: 0.4s
}

.modal-body {
  padding: 2px 16px;
}

.modal-content {
  position: fixed;
  background-color: #fefefe;
  padding: 0%;
  margin: auto;
  overflow: auto;
  text-align: center;
  border: 1px solid #888;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
  animation-name: animatetop;
  animation-duration: 0.4s
}

.modal-content .load-gif {
  width: 150px;
  height: 150px;
  top: 45%;
  left: 45%;
  box-shadow: none;
  overflow: hidden;
  border-style: none;
  animation: none;
  background-color: rgba(0, 0, 0, 0);
}

.modal-content-large {
  height: 620px;
  width:76%;
  top: 15%;
  left: 12%;
}

.modal-content-small {
  height: 180px;
  width:56%;
  top: 15%;
  left: 22%;
}

.modal-header {
  text-align: center;
  padding: 2px 16px;
  background-color: #5cb85c;
  color: white;
}

@keyframes animatetop {
  from {top: -300px; opacity: 0}
  to {top: 15%; opacity: 1}
}

@keyframes fadeIn {
  from {opacity: 0} 
  to {opacity: 1}
}

/* REUSABLE ELEMENTS */
.right {
  float: right;
}

.left {
  float: left;
}

.center {
  text-align: center;
}

/* MASONRY STYLING */
.grid {
  width: 100%;
  padding: 0% 10% 0% 10%;
}

/* clearfix */
.grid:after {
  content: '';
  display: block;
  clear: both;
}

.grid-sizer,.grid-item {
  float: left;
  width: 20%;
  background: #fff;
  border: 2px solid #E8E8E8;
  box-shadow: 3px 3px 20px rgb(145, 145, 145);
  border-color: hsla(0, 0%, 0%, 0.5);
  border-radius:15px;
  margin-bottom: 10px;
  margin-right: 5px;
  margin-left: 5px;
  overflow: hidden;
  transition-property: background, transform;
  transition-duration: 0.25s;
}

.grid-item-inner-content {
  display: none;
}

.grid-item--width2 { width: 25%; }
.grid-item--width3 { width: 30%; }
.grid-item--width4 { width: 40%; }

.grid-item--selected {
  width: 60%;
  z-index: 2;
}

.grid-item--selected .grid-item-inner-content{
  display: block;
  text-align: left;
}

.grid-item:before {
  display: block;
  color: white;
  padding-top: 0.2em;
  text-align: center;
  font-size: 1.4rem;
}

.grid-item:hover {
  background: #E8E8E8;
  border-color: white;
  cursor: pointer;
}

